fix: limit description overflow to two lines in unfurl component

--- a/src/assets/styles/components/_unfurl.scss
+++ b/src/assets/styles/components/_unfurl.scss
@@ -69,4 +69,9 @@
   align-self: start;
   grid-area : description;
   font-size : var(--fs-7);
+
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
 }
